# audex

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/: convert_tags.rs  diff_tags.rs  file_operations.rs  read_tags.rs  serialize_tags.rs  tracing_debug.rs  write_tags.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_aac.rs  fuzz_ac3.rs  fuzz_aiff.rs  fuzz_apev2.rs  fuzz_asf.rs  fuzz_async_aac.rs  fuzz_async_ac3.rs  fuzz_async_aiff.rs  fuzz_async_apev2.rs  fuzz_async_asf.rs  fuzz_async_auto_detect.rs  fuzz_async_auto_detect_ext.rs  fuzz_async_dsdiff.rs  fuzz_async_dsf.rs  fuzz_async_easyid3.rs  fuzz_async_easymp3.rs  fuzz_async_easymp4.rs  fuzz_async_flac.rs  fuzz_async_id3.rs  fuzz_async_monkeysaudio.rs  fuzz_async_mp3.rs  fuzz_async_mp4.rs  fuzz_async_musepack.rs  fuzz_async_oggflac.rs  fuzz_async_oggopus.rs  fuzz_async_oggspeex.rs  fuzz_async_oggtheora.rs  fuzz_async_oggvorbis.rs  fuzz_async_optimfrog.rs  fuzz_async_smf.rs  fuzz_async_tak.rs  fuzz_async_trueaudio.rs  fuzz_async_wave.rs  fuzz_async_wavpack.rs  fuzz_auto_detect.rs  fuzz_auto_detect_ext.rs  fuzz_detect_format.rs  fuzz_dsdiff.rs  fuzz_dsf.rs  fuzz_easyid3.rs  (+29 more)
src/: aac.rs  ac3.rs  aiff.rs  apev2.rs  constants.rs  diff.rs  dsdiff.rs  dsf.rs  easyid3.rs  easymp4.rs  file.rs  flac.rs  iff.rs  lib.rs  limits.rs  m4a.rs  monkeysaudio.rs  musepack.rs  ogg.rs  oggflac.rs  oggopus.rs  oggspeex.rs  oggtheora.rs  oggvorbis.rs  optimfrog.rs  replaygain.rs  riff.rs  serde_helpers.rs  smf.rs  snapshot.rs  tags.rs  tak.rs  tracing_macros.rs  trueaudio.rs  util.rs  vorbis.rs  wave.rs  wavpack.rs
src/asf/: attrs.rs  file.rs  mod.rs  objects.rs  util.rs
src/id3/: file.rs  frames.rs  id3v1.rs  mod.rs  specs.rs  tags.rs  util.rs
src/mp3/: file.rs  mod.rs  util.rs
src/mp4/: as_entry.rs  atom.rs  error.rs  file.rs  mod.rs  util.rs
src/tagmap/: mappings.rs  mod.rs  normalize.rs
tests/: async_integration.rs  common.rs  property_tests_comprehensive.rs  test_aac.rs  test_ac3.rs  test_aiff.rs  test_aiff_wave_chunk_parsing_bound.rs  test_apev2.rs  test_asf.rs  test_async_clear_all_formats.rs  test_async_error_paths.rs  test_async_load_all_formats.rs  test_async_reader_tag_verify.rs  test_basictags_roundtrip.rs  test_bitreader_alloc_limit.rs  test_clear_all_formats.rs  test_comprehensive_tag_roundtrip.rs  test_constants.rs  test_conversion_format_matrix.rs  test_core.rs  test_diff.rs  test_diff_display.rs  test_diff_format_matrix.rs  test_diff_integration.rs  test_diff_normalized.rs  test_dsdiff.rs  test_dsf.rs  test_easyid3.rs  test_easyid3_handlers.rs  test_easyid3_registration.rs  test_easymp4.rs  test_file_detect.rs  test_file_reader.rs  test_flac.rs  test_id3.rs  test_id3_clear_errors.rs  test_id3_delete.rs  test_id3_encoding_edge_cases.rs  test_id3_frame_specs.rs  test_id3_frames.rs  (+61 more)
tests/data/: silence-44-s.flac  silence-44-s.wv
wasm/: Cargo.toml  Makefile  README.md
wasm/examples/: convert_tags.mjs  diff_tags.mjs  extract_tags_json.mjs  read_tags.mjs  write_tags.mjs
wasm/src/: audio_file.rs  error.rs  lib.rs  stream_info.rs  utils.rs
wasm/tests/: test_wasm_comprehensive_tags.rs  test_wasm_conversion_matrix.rs  test_wasm_crud_all_formats.rs  test_wasm_diff_matrix.rs  test_wasm_edge_cases.rs  test_wasm_roundtrip_all_formats.rs  test_wasm_save_error_state_recovery.rs  test_wasm_stream_info_only.rs  web.rs
