[package]
name = "audex-wasm"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["bakgio"]
license = "MIT OR Apache-2.0"
description = "WebAssembly bindings for the audex audio metadata library"
repository = "https://github.com/bakgio/audex"
readme = "README.md"
keywords = ["audio", "metadata", "wasm", "webassembly", "tagging"]
categories = ["multimedia::audio", "wasm"]
exclude = ["tests/*"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
audex = { version = "0.1.0", path = "..", features = ["serde"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]
